Bug 10279 - smbclient does not use cached creds
Summary: smbclient does not use cached creds
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: libsmbclient (show other bugs)
Version: 4.1.9
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on: 10288
Blocks: 10077
  Show dependency treegraph
 
Reported: 2013-11-18 21:33 UTC by David Woodhouse
Modified: 2015-07-31 21:14 UTC (History)
3 users (show)

See Also:


Attachments
v4-2-test patch (4.28 KB, patch)
2014-12-05 09:08 UTC, Andreas Schneider
gd: review+
Details
v4-1-test patch (4.28 KB, patch)
2014-12-05 09:10 UTC, Andreas Schneider
gd: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Woodhouse 2013-11-18 21:33:33 UTC
[dwmw2@shinybook ~]$ smbclient //amr.corp.intel.com/iss -U GER\\dwoodhou --ccache
Enter GER\dwoodhou's password: 

Gr. I said --ccache.

Yes, it works.

[dwmw2@shinybook ~]$ /usr/bin/ntlm_auth --helper-protocol ntlmssp-client-1 --use-cached-creds --username dwoodhou
YR
Got 'YR' from squid (length: 2).
got NTLMSSP packet:
YR TlRMTVNTUAABAAAABYIIYAMAAwAgAAAADgAOACMAAABHRVJEV09PREhPVS1NT0JMNQ==
Comment 1 David Woodhouse 2013-11-18 21:40:59 UTC
This is all still true if I use --use-ccache instead of --ccache.
Comment 2 David Woodhouse 2014-09-22 19:51:49 UTC
Still broken in 4.1.9.
Comment 3 Andreas Schneider 2014-11-13 14:55:36 UTC
I've proposed a patch upstream to fix the issue.
Comment 4 David Woodhouse 2014-11-13 16:01:49 UTC
Thanks. Please could you provide a reference? I'll do some testing.
Comment 5 Andreas Schneider 2014-11-18 06:57:42 UTC
The top 3 patches here:

https://git.samba.org/?p=asn/samba.git;a=shortlog;h=refs/heads/master-smbclient
Comment 6 Andreas Schneider 2014-12-05 09:08:53 UTC
Created attachment 10489 [details]
v4-2-test patch
Comment 7 Andreas Schneider 2014-12-05 09:10:03 UTC
Created attachment 10490 [details]
v4-1-test patch
Comment 8 Guenther Deschner 2014-12-05 09:35:16 UTC
Karolin, please add to 4.1 and 4.2. Thanks!
Comment 9 Karolin Seeger 2014-12-07 19:27:29 UTC
Pushed to autobuild-v4-[1|2]-test.
Comment 10 Karolin Seeger 2014-12-10 20:14:29 UTC
(In reply to Karolin Seeger from comment #9)
Pushed to both branches.
Closing out bug report.

Thanks!
Comment 11 David Woodhouse 2015-06-18 09:50:24 UTC
Apologies for the delayed testing. This is working fine for me in 4.2.2.

However, I still don't have the option to just use SPNEGO properly, by trying Kerberos and then falling back to NTLMSSP if that fails. That's filed separately as bug 10288.